--- a/views/editprofile.phtml
+++ b/views/editprofile.phtml
@@ -8,7 +8,7 @@
             <label for="twitch">Twitch username</label>
             <input type="text" name="twitch" value="<?=$loggedInUser->userData->twitch;?>"/>
             <label for="youtube">Youtube channel URL / user name</label>
-            <input type="text" name="youtube" value="www.youtube.com<?=$loggedInUser->userData->youtube;?>"/>
+            <input type="text" name="youtube" value="<?=($loggedInUser->userData->youtube != NULL) ? "www.youtube.com".$loggedInUser->userData->youtube : ""?>"/>
             <label for="youtube">Board name (Keep empty to remain synced with your steam nickname)</label>
             <input type="text" name="boardname" value="<?=$loggedInUser->userData->boardname;?>"/>
             <button class="button" type="submit">Save</button>
