--- a/views/parts/main.phtml
+++ b/views/parts/main.phtml
@@ -25,6 +25,9 @@
 
     <body>
         <div id="wrapper">
+
+            <?php include("announcement.phtml"); ?>
+            
             <div id="header">
                 <div id="header_left">
                     <h2 id="sitetitle">Portal 2 Leaderboards</h2>
@@ -32,7 +35,6 @@
                         <?php include("navigation.phtml"); ?>
                     </div>
                 </div>
-
                 <div id="header_right">
                     <div id="userinfo">
                         <?php include("userinfo.phtml"); ?>
