--- a/views/leastportals.phtml
+++ b/views/leastportals.phtml
@@ -1,33 +1,45 @@
+<?php $mapInfo = $GLOBALS["mapInfo"];?>
+<?php $mode = Router::$location[2]; ?>
+
+<script>
+    function goToSteamPage(evt, map) {
+        if ($(evt.target).hasClass("chamberimage") || $(evt.target).hasClass("portalamount") || $(evt.target).hasClass("portalsused")) {
+            location.href = 'http://steamcommunity.com/stats/Portal2/leaderboards/' + map;
+        }
+    }
+</script>
+
 <div id="leastportals">
-	<?php
-		$i=1; foreach($view->board as $board_key => $board_val): ?>
-			<div class="chapterinfo">
-			<?php
-				$chapter_number = $i;
-				if(strlen($i) != 2) {
-					$chapter_number = "0".$i;
-				}
-			?>
-			<h1 class="chapternumber">Chapter <?php echo $chapter_number;$i++;?></h1>
-			<h1 class="chaptername"><?=$board_key;?></h1>
-			</div>
-			<div class="chambers">
-			<?php foreach($board_val as $chamb_key => $chamb_val): ?>
+    <?php $i=1; foreach(array_keys($view->board) as $chapter): ?>
+        <?php $chapterName = $mapInfo["chapters"][$chapter]["chapterName"]?>
+        <div class="chapterinfo">
+            <h1 class="chapternumber"><?= (($mode == "coop") ? "Course " : "Chapter ")."0".$i;?></h1>
+            <h1 class="chaptername"><?=$chapterName;?></h1>
+        </div>
+        <div class="chambers">
+            <?php foreach($view->board[$chapter] as $steamId => $boardData): ?>
+                <?php $steamIdTime = $mapInfo["lpMaps"][$steamId]; ?>
+                <?php $mapData = $mapInfo["maps"][$steamIdTime]; ?>
+                <?php $grammar = ($boardData["portals"] != 1) ? "Portals" : "Portal"; ?>
 				<div class="chamber leastportals">
-				<div class="chamberimage"  onclick="location.href='http://steamcommunity.com/stats/Portal2/leaderboards/<?=$chamb_val[0];?>';" style="background: url('/images/chambers/<?=$chamb_val[1];?>.jpg')">
+				<div class="chamberimage" onclick="goToSteamPage(event, <?=$steamIdTime?>)" style="background: url('/images/chambers/<?=$steamIdTime;?>.jpg')">
 					<div class="chambertitle">
 						<div class="titlebghelper"></div>
-						<div class="titlebg"><a href="http://steamcommunity.com/stats/Portal2/leaderboards/<?=$chamb_val[0];?>"><?=$chamb_key; ?></a></div>
-<!--						<div class="chamber_icons">-->
-<!--							<span class="icons youtubeLink fa-stack">-->
-<!--								  <i class="fa fa-square fa-stack-2x"></i>-->
-<!--								  <i class="fa fa-play fa-stack-1x"></i>-->
-<!--							</span>-->
-<!--						</div>-->
+						<div class="titlebg"><a href="http://steamcommunity.com/stats/Portal2/leaderboards/<?=$steamId;?>"><?=$mapData["mapName"]; ?></a></div>
+                        <div class="chamber_icons_right">
+                            <?php if ($boardData["youtubeId"] != NULL): ?>
+                                <span class="icons youtubeEmbedButton fa-stack"
+                                      onclick="embedOnBody(
+                                          '<?=$boardData["youtubeId"]?>',
+                                          '<?=$mapData["mapName"]?> - <?=$boardData["portals"]?> <?=$grammar?>')">
+                                        <i class="fa fa-square fa-stack-1x"></i>
+                                        <i class="fa fa-youtube-play fa-stack-2x"></i>
+                                    </span>
+                            <?php endif; ?>
+                        </div>
 					</div>
 					<div class="portalsused">
-						<?php $grammar = ($chamb_val[2] != 1) ? "PORTALS" : "PORTAL"; ?>
-						<div class="portalamount"><?=$chamb_val[2];?></div> <?=$grammar;?>
+						<div class="portalamount"><?=$boardData["portals"];?></div><?=$grammar;?>
 					</div>
 				</div>
 
