--- a/views/parts/navigation.phtml
+++ b/views/parts/navigation.phtml
@@ -1,43 +1,43 @@
 <?php $mapInfo = Cache::get("maps") ?>
 <a href="/changelog" class="nav_button">
     <div id="time_icon" class="nav_icon"></div>
-    <div class="label">Score Updates</div>
+    <div class="btnLabel">Score Updates</div>
 </a>
 <a href="/chambers/sp" class="nav_button">
     <div id="sp_icon" class="nav_icon"></div>
-    <div class="label">Single Player</div>
+    <div class="btnLabel">Single Player</div>
 </a>
 <a href="/chambers/coop" class="nav_button">
     <div id="coop_icon" class="nav_icon"></div>
-    <div class="label">Cooperative</div>
+    <div class="btnLabel">Cooperative</div>
 </a>
 <div class="nav_dropdown">
     <div id="cube_icon" class="nav_icon"></div>
-    <div class="label">Aggregated</div>
+    <div class="btnLabel">Aggregated</div>
     <ul style="width:150px">
       <li>
           <a href="/aggregated/overall" style="height: 29px">
             <div class="nav_icon" style="background: url('/images/cup_noborder.jpg'); background-size: 29px 29px;"></div>
-            <div class="label">Overall</div>
+            <div class="btnLabel">Overall</div>
           </a>
       </li>
       <li class="nav_dropdown">
           <div style="height: 29px">
               <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>
-              <div class="label">Single Player</div>
+              <div class="btnLabel">Single Player</div>
           </div>
           <ul style="width:185px">
               <li>
                 <a href="/aggregated/sp">
                     <div class="nav_icon"><i class="fa fa-star" aria-hidden="true"></i></div>
-                    <div class="label">Total</div>
+                    <div class="btnLabel">Total</div>
                 </a>
               </li>
               <?php $i = 1; foreach ($mapInfo["modes"]["sp"] as $chapter): ?>
                   <li>
                       <a href="/aggregated/chapter/<?=$chapter?>">
                         <div class="nav_icon"><?=$i?></div>
-                        <div class="label"><?=$mapInfo["chapters"][$chapter]["chapterName"]?> </div>
+                        <div class="btnLabel"><?=$mapInfo["chapters"][$chapter]["chapterName"]?> </div>
                       </a>
                   </li>
               <?php $i++; endforeach; ?>
@@ -46,20 +46,20 @@
       <li class="nav_dropdown">
           <div style="height: 29px">
               <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>
-              <div class="label">Cooperative</div>
+              <div class="btnLabel">Cooperative</div>
           </div>
           <ul style="width:185px">
               <li>
                   <a href="/aggregated/coop">
                       <div class="nav_icon"><i class="fa fa-star" aria-hidden="true"></i></div>
-                      <div class="label">Total</div>
+                      <div class="btnLabel">Total</div>
                   </a>
               </li>
               <?php $i = 1; foreach ($mapInfo["modes"]["coop"] as $chapter): ?>
                   <li>
                       <a href="/aggregated/chapter/<?=$chapter?>">
                         <div class="nav_icon"><?=$i?></div>
-                        <div class="label"><?=$mapInfo["chapters"][$chapter]["chapterName"]?></div>
+                        <div class="btnLabel"><?=$mapInfo["chapters"][$chapter]["chapterName"]?></div>
                       </a>
                   </li>
               <?php $i++; endforeach; ?>
@@ -67,13 +67,34 @@
       </li>
     </ul>
 </div>
-<!--<a href="/leastportals" class="nav_button">-->
+
+<!--<div class="nav_dropdown">-->
 <!--    <div id="lp_icon" class="nav_icon"></div>-->
-<!--    <div class="label">LEAST PORTALS</div>-->
+<!--    <div class="label">Least Portals</div>-->
+<!--    <ul style="width:150px">-->
+<!--        <li>-->
+<!--            <a href="/lp/sp" style="height: 29px">-->
+<!--                <div class="nav_icon" style="background: url('/images/sp_noborder.jpg'); background-size: 29px 29px;"></div>-->
+<!--                <div class="label">Single Player</div>-->
+<!--            </a>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--            <a href="/lp/coop" style="height: 29px">-->
+<!--                <div class="nav_icon" style="background: url('/images/coop_noborder.jpg'); background-size: 29px 29px;"></div>-->
+<!--                <div class="label">Cooperative</div>-->
+<!--            </a>-->
+<!--        </li>-->
+<!--    </ul>-->
+<!--</div>-->
+
+<!--<a href="/lp" class="nav_button">-->
+<!--    <div id="lp_icon" class="nav_icon"></div>-->
+<!--    <div class="label">Least Portals</div>-->
 <!--</a>-->
+
 <a href="/about" class="nav_button">
     <div id="aperture_icon" class="nav_icon"></div>
-    <div class="label">About</div>
+    <div class="btnLabel">About</div>
 </a>
 
 <script>
