--- a/views/parts/announcement.phtml
+++ b/views/parts/announcement.phtml
@@ -22,7 +22,7 @@
             $("#announcement .close-btn").click(function() {
                 $("#announcement").slideUp("slow");
                 var d = new Date();
-                d.setTime(d.getTime() + (<?=Router::cookieLifetime?> * 1000));
+                d.setTime(d.getTime() + (10 * 365 * 24 * 60 * 60 * 1000)); //10 years
                 var expires = "expires="+d.toGMTString();
                 document.cookie = "<?=$cookieName?>=yes; " + expires;
             });
