--- a/views/profile.phtml
+++ b/views/profile.phtml
@@ -485,7 +485,7 @@
     $(".uploadInfo .close-btn").click(function() {
         $(".uploadInfo").slideToggle();
         var d = new Date();
-        d.setTime(d.getTime() + (<?=Router::cookieLifetime?> * 1000));
+        d.setTime(d.getTime() + (10 * 365 * 24 * 60 * 60 * 1000)); //10 years
         var expires = "expires="+d.toGMTString();
         document.cookie = "upload-notification-read=yes; " + expires;
     });
